--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/jsrsasign": "^9.0.3",
     "@types/luxon": "^2.0.9",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.26.0",
+    "jsrsasign": "^10.5.8",
+    "jsrsasign-util": "^1.0.5",
     "luxon": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
